Convert portrait image to webp and fix the first section inner alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,40 +81,35 @@ a.open {
 }
 
 .wallpaper {
-    background: linear-gradient(rgba(250, 250, 250, 0.9), rgba(249, 254, 222, 0.8),
-            rgba(250, 250, 250, 0.9)), url('../img/dragon.png');
+    background: linear-gradient(rgba(250, 250, 250, 1), rgba(249, 252, 232, 0.9),
+            rgba(250, 250, 250, 1)), url('../img/dragon.png');
     height: 100%;
 
 }
 
 /* index.html - introduction article */
-.portrait-heading {
-    height: 30vh;
-    width: auto;
-    float: none;
-    background-color: #c0c0c0;
-    text-align: center;
-    margin-top: 5px;
-}
 
-.portrait-heading img {
-    height: 30vh;
-    width: auto;
-    margin: auto;
-}
 
 .portrait-text {
     border: 1px solid white;
-    height: 30vh;
+    height: 35vh;
     background-color: #fafae1;
     flex: 1 1 auto;
     overflow: scroll;
-    margin: 5px;
+    padding: 5px;
+}
+
+.portrait-text img{
+    height: 30vh;
+    width: auto;
+    display: block;
+    float: left;
+    margin: 10px;
 }
 
 .portrait-text>p {
     font-size: large;
-    margin: 10px;
+    padding: 10px;
     height: auto;
     text-align: justify;
 }
@@ -275,13 +270,17 @@ a.open {
 }
 .book-showcase h2 {
     height: 100px;
+    
 }
 .book-showcase img {
     width: auto;
     height: 400px;    
     overflow: hidden;
 }
-
+.book-showcase p {
+    text-align: justify;
+    padding: 5px 15px;
+}
 #bookorder-form {
     width:100%;
     height:auto;
@@ -437,6 +436,8 @@ footer {
     body {
         width: 80vw;
         margin: 0 auto;
+        background-color: #dde6f1;
+        background-size: 80vw;
     }
 
     h1 {
